CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_REQUIRED_STANDARD ON)
SET(CMAKE_DEBUG_POSTFIX "-d")

SET(PROJECT_NAME "sfui-testing")
PROJECT(${PROJECT_NAME} LANGUAGES CXX)

SET(SOURCES main.cpp)
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ../SFML/include)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} sfml-graphics sfml-audio sfml-window sfml-system)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ../../SFUI/include)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} sfui)

